--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Profil Saya - surya,/title>
+    <title>Profil Saya - surya</title>
     <link rel="stylesheet" herf="style.css">
 </head>
 <body>
