--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Profil Saya - surya</title>
-    <link rel="stylesheet" herf="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <div class'karyu profil">
