--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <div class'karyu profil">
-        <img src="foto-profil.jpg" alt="foto profil saya>
+        <div class="kartu profil">
+        <img src="foto-profil.jpg" alt="foto profil saya">
         <h1>surya aji saputro</h1>
-        <p>Siswa SMA Yang tertarik dengan teknologi dan desain. Selamay datang diwebsite pertama saya</p>
-        <a herf="https://www.instragam.com/sryaa_ajsptr?igsh=ZGJuc3g5Zl2bwlw">kunjungi instragam saya</a>
-        <button id="sapabuttton">sapa saya!</button>
+        <p>Siswa SMA Yang tertarik dengan teknologi dan desain. Selamat datang diwebsite pertama saya</p>
+        <a href="https://www.instragam.com/sryaa_ajsptr?igsh=ZGJuc3g5Zl2bwlw">kunjungi instragam saya</a>
+        <button id="sapa-buttton">sapa saya!</button>
      </div>
- <sript src"script.js"></script>
+ <script src="script.js"></script>
  </body>
  </html>
